# structy

./: .gitignore  LICENSE.md  README.md
c/add_lists/: README.md
c/bottom_right_value/: README.md
c/breadth_first_values/: README.md
c/create_linked_list/: README.md
c/is_univalue_list/: README.md
c/longest_streak/: README.md
c/max_root_to_leaf_path_sum/: README.md  project-init.sh
c/max_value/: .gitignore  CMakeLists.txt  LICENSE.md
c/max_value/include/: solution.h
c/max_value/src/: solution.c
c/max_value/test/: test_solution.c
c/remove_node/: README.md
c/tree_includes/: README.md
cpp/add_lists/: README.md
cpp/anagrams/: CMakeLists.txt
cpp/bottom_right_value/: README.md
cpp/breadth_first_values/: README.md
cpp/countdown/: countdown  countdown.cpp
cpp/create_linked_list/: README.md
cpp/depth_first_values/: README.md
cpp/get_node_value/: README.md
cpp/how_high/: README.md
cpp/insert_node/: README.md
cpp/is_univalue_list/: README.md
cpp/max_root_to_leaf_path/: CMakeLists.txt  project-init.sh
cpp/max_root_to_leaf_path/include/: solution.h
cpp/max_root_to_leaf_path/test/: test_solution.cpp
cpp/max_root_to_leave_path_sum/: README.md
cpp/most_freq_char/: CMakeLists.txt
cpp/remove_node/: README.md
cpp/reverse_linked_list/: README.md
cpp/sum_numbers_recursive/: CMakeLists.txt
cpp/sum_of_lengths/: CMakeLists.txt  README.md
cpp/sum_of_lengths/.cache/clangd/index/: solution.cpp.EB0CC63370FDB058.idx  solution.h.04F8AE7A110F138C.idx  test_solution.cpp.C1E8791B38C868BF.idx
cpp/sum_of_lengths/include/: solution.h
cpp/sum_of_lengths/src/: solution.cpp
cpp/sum_of_lengths/test/: test_solution.cpp
cpp/tree_includes/: .gitignore  README.md
cpp/tree_min_value/: README.md
cpp/tree_path_finder/: README.md
cpp/tree_sum/: README.md
cpp/tree_value_count/: README.md
cpp/zipper_lists/: README.md
cs/HeyProgrammer/: HeyProgrammer.sln
go/: go.mod
go/addLists/: README.md  go.mod  solution.go  solution_test.go
go/anagrams/: anagrams.go  anagrams_test.go  go.mod  solution.go  solution_test.go
go/bottomRightValue/: README.md  go.mod  solution.go  solution_test.go
go/breadthFirstValues/: go.mod  solution.go  solution_test.go
go/createLinkedList/: README.md  go.mod  solution.go  solution_test.go
go/depthFirstValues/: go.mod  solution.go  solution_test.go
go/fivesort/: go.mod  solution.go  solution_test.go
go/fizzBuzz/: go.mod  solution.go  solution_test.go
go/getNodeValue/: go.mod  solution.go  solution_test.go
go/hey_programmer/: go.mod  hey_programmer.go  hey_programmer_test.go
go/heyprogrammer/: heyprogrammer.go  heyprogrammer_test.go
go/howHigh/: README.md  go.mod  solution.go  solution_test.go
go/insertNode/: README.md  go.mod  solution.go  solution_test.go
go/isPrime/: go.mod  solution.go  solution_test.go
go/isprime/: go.mod  isprime.go  isprime_test.go
go/linkedListFind/: README.md  go.mod  solution.go  solution_test.go
go/linkedListValues/: go.mod  solution.go  solution_test.go
go/longestStreak/: go.mod  solution.go  solution_test.go
go/longestWord/: go.mod  solution.go  solution_test.go
go/maxRootToLeafPathSum/: README.md  go.mod  solution.go  solution_test.go
go/maxValue/: go.mod  solution.go  solution_test.go
go/max_value/: go.mod  max_value.go  max_value_test.go
go/maxvalue/: maxvalue.go  maxvalue_test.go
go/mergeLists/: go.mod  (+3 more)
(+289 files in other folders)
